--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/imadcollin/Password_generator/issues"
   },
-  "homepage": "https://github.com/imadcollin/Password_generator#readme"
+  "homepage": "https://github.com/imadcollin/Password_generator#readme",
+  "dependencies": {
+    "generate-password": "^1.3.0"
+  }
 }
