--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/imadcollin/Password_generator#readme",
   "dependencies": {
     "generate-password": "^1.3.0",
-    "string-entropy": "0.0.2"
+    "string-entropy": "0.0.2",
+    "xkcd-pass-plus": "^0.1.2"
   }
 }
