--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "generate-password": "^1.3.0",
     "string-entropy": "0.0.2",
-    "xkcd-pass-plus": "^0.1.2"
+    "xkcd-pass-plus": "^0.1.2",
+    "xkcd-password": "^2.0.0"
   }
 }
